# initiative

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  config.toml  default.nix  docker-compose.yml  flake.nix  hydra-jobs.nix  initiative.cabal  initiative.nix  release.nix  result  shell.nix  spec.json
.github/workflows/: haskell.yml
app/: Main.hs
sql/: drop.sql  schema.sql
src/: Lib.hs
src/Lib/: App.hs  Config.hs  Db.hs  Server.hs
src/Lib/App/: Env.hs  Error.hs  Monad.hs
src/Lib/Core/: Game.hs  Player.hs  UserSession.hs
src/Lib/Db/: Functions.hs  Game.hs  Player.hs  Schema.hs  User.hs  UserSession.hs
src/Lib/Effects/: Log.hs
src/Lib/Server/: Auth.hs  Common.hs  Game.hs
test/: Main.hs
test/Test/: Common.hs  Server.hs
test/common/Test/: Assert.hs
test/integration/: Main.hs
test/integration/Test/: Server.hs
test/unit/: Main.hs
