cabal-version:      3.0
name:               initiative
version:            0.1.0.0
synopsis:
    Organizing TTRPG and other similar groups to find timeslots for games

-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             oliverpauffley
maintainer:         mrpauffley@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common common-options
    ghc-options: -Wall
    build-depends: relude
    mixins: base hiding (Prelude)
          , relude (Relude as Prelude)
          , relude
    default-extensions:  BangPatterns
                         ConstraintKinds
                         DataKinds
                         DeriveGeneric
                         DerivingStrategies
                         DerivingVia
                         FlexibleContexts
                         FlexibleInstances
                         GeneralizedNewtypeDeriving
                         InstanceSigs
                         KindSignatures
                         LambdaCase
                         MultiParamTypeClasses
                         OverloadedStrings
                         OverloadedLabels
                         RecordWildCards
                         ScopedTypeVariables
                         TypeApplications
                         TypeFamilies
                         TypeOperators          


library
    import:           common-options
    exposed-modules:
                      -- Application monad setup
                      Lib
                      Lib.App
                      Lib.App.Env
                      Lib.App.Error
                      Lib.App.Monad

                      Lib.Config

                      -- Effects
                      Lib.Effects.Log

                      -- Database
                      Lib.Db
                      Lib.Db.Functions
                      Lib.Db.Schema
                      Lib.Db.Game

                      -- Server
                      Lib.Server


                      -- Core types
                      Lib.Core.Game
                      
    build-depends:    base ^>=4.19.2.0
                    , aeson
                    , lens
                    , tomland
                    , mtl
                    , postgresql-simple
                    , resource-pool
                    , servant
                    , servant-client
                    , servant-server
                    , case-insensitive
                    , http-types
                    , text
                    , time
                    , wai
                    , wai-extra
                    , warp
                    , co-log
    default-extensions:   BangPatterns
                          ConstraintKinds
                          DataKinds
                          DeriveGeneric
                          DerivingStrategies
                          DerivingVia
                          FlexibleContexts
                          FlexibleInstances
                          GeneralizedNewtypeDeriving
                          InstanceSigs
                          KindSignatures
                          LambdaCase
                          MultiParamTypeClasses
                          OverloadedStrings
                          OverloadedLabels
                          RecordWildCards
                          ScopedTypeVariables
                          TypeApplications
                          TypeFamilies
                          TypeOperators
    hs-source-dirs:   src
    default-language: Haskell2010

executable initiative
    import:           common-options
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.19.2.0,
        initiative
    pkgconfig-depends: zlib

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite initiative-test
    import:           common-options
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.19.2.0,
        initiative
